+ Added descriptor for user contracts. [Guido]
+ Added support for cascading deleting hour registrations when deleting
  a phase. [Dennis]
+ Added filter and a column diff_planning to the projectstatus report. 
  [dennisjan]
+ Added new feature when you add a project and you want to copy a specific 
  documentstructure. [dennisjan]
- Removed duplicate Dayview link in the calendar Employeeview. [Guido]
* Fixed PHP notices. [Guido]
* Replaced deprecated text() calls by atktext(). [Guido]
* Fixed session problem with master gantt which in some cases would not
  display because it thought the session had expired. [Guido]
* $config_auth_usernode and config_auth_emailfield are now set. The
  password mailing feature can now be enabled by setting
  $config_auth_enablepasswordmailer = true; in config.inc.php. [Guido]
* Bugfix: When selecting a new contact in a project it shouldn't show
  the userid field. [Sandy,Ivo]
* Added dutch and english tranlations of the adminpim text. [Guido]
* Fixed a rendering bug in the calendar dayview which caused appointments
  to be drawn not as long as they should be. A workaround for this problem
  was already implemented for netscape/mozilla based browsers by not
  showing the border around an appointment (which was causing this
  problem). Internet Explorer 6 however, also seemed to affected by this
  rendering bug, which is the reason for this change. Now the border around
  the appointment is implemented differently (using CSS) and the exception
  for netscape/mozilla users is removed. [Guido]
* Removed deprecated atklayout usage. [Guido]
* Replaced "-" options by "No value" options in the orderby feature of
  the Hours survey. [Guido]
* The list of activities in the time registration should not be translated.
  (also prevents translation not found warnings). [Guido]
* Fixed the login problem where you would see a login box in the menu and
  top frame after logging in. This was caused by the menu and top pages